--- a/packages/app-header/src/containers/App/styles.module.scss
+++ b/packages/app-header/src/containers/App/styles.module.scss
@@ -1,38 +1,46 @@
+@import "~@home/styles/scss/mixins";
+
 .wrapper {
-    background: #484948;
-    display: flex;
-    flex-direction: row;
+  background: #484948;
+  display: flex;
+  flex-direction: row;
 }
 
 .timer {
-    align-self: flex-start;
-    width: 30%;
-    max-width: 320px;
-    display: flex;
+  @include leftColumn();
+  align-self: flex-start;
+  display: flex;
+
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 20px;
+  background: #323332;
+
+  .content {
     padding: 16px 32px;
-    justify-content: flex-start;
-    align-items: center;
-    font-size: 20px;
-    background: #323332;
-    // border: 1px solid red;
+  }
 
-    .time, .seconds {
-        font-weight: 600;    
-    }
+  .time,
+  .seconds {
+    font-weight: 600;
+  }
 
-    .seconds {
-        font-size: 16px;
-    }
+  .seconds {
+    font-size: 16px;
+  }
 
-    .date {
-        margin-left: 8px;
-        font-size: 16px;
-        text-transform: uppercase;
-    }
+  .date {
+    margin-left: 8px;
+    font-size: 16px;
+    text-transform: uppercase;
+  }
 }
 
 .notifications {
-    flex-basis: 80%;
+  flex-basis: 100%;
+  min-height: 20px;
+
+  .content {
     padding: 16px 32px;
-    min-height: 20px;
+  }
 }
