--- a/packages/lights/src/components/LightsGroup/styles.module.scss
+++ b/packages/lights/src/components/LightsGroup/styles.module.scss
@@ -1,54 +1,55 @@
+@import "~@home/styles/scss/variables";
+
 .wrapper {
     font-family: Roboto,sans-serif;
     background: black;
     color: #fff;
-    padding: 8px;
+    padding: 16px;
+    border-radius: 10px;
     display: flex;
     flex-direction: row;
     margin: 4px 0;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
 
     h3 {
-        margin: 0 0 0 8px;
-        font-weight: normal;
-        font-size: 16px;
+        font-weight: 800;
+        font-size: 18px;
         font-weight: 400;
-        flex-basis: 90%;
+        margin: 0;
+    }
+
+    .dsc {
+        margin: 0 0 0 8px;
+        flex-basis: 30%;
+    }
+
+    .lightWrapper {
+        flex-basis: 80px;
+    }
+
+    .hue {
+        flex-basis: 29%;
+        margin: 0 16px;
+    }
+
+    .slider {
+        flex-basis: 29%;
+    }
+
+    p {
+        font-size: 13px;
+        font-weight: bold;
+        margin: 4px 0 0 0;
+        padding: 0;
+        color: $colorBg;
     }
 }
 
-:global {
-    .slider {
-        width: 100%;
-        max-width: 500px;
-        height: 50px;
-    }
-
-    .track {
-        position: relative;
-        
-    }
-
-    .track-0 {
-        background-color: #00ba99;
-        height: 4px;
-        top: 23px;
-    }
-
-    .track-1 {
-        background-color: #bcbdbc;
-        height: 2px;
-        top: 24px;
-    }
-
-    .thumb {
-        top: 15px;
-        background-color: #00ba99;
-        border: 2px solid black;
-        width: 15px;
-        height: 15px;
-        border-radius: 50%;
-        line-height: 38px;
+.light {
+    svg {
+        height: 2.2em;
+        width: 1.2em;
+        margin-top: 4px;
     }
 }
