--- a/packages/router/src/containers/App/styles.module.scss
+++ b/packages/router/src/containers/App/styles.module.scss
@@ -3,6 +3,8 @@
     margin: 0;
     padding: 0;
     font-family: Roboto, sans-serif;
+    font-smooth: always;
+    -webkit-font-smoothing: antialiased;
   }
 }
 
