--- a/packages/lights/src/components/LightsGroupWidget/styles.module.scss
+++ b/packages/lights/src/components/LightsGroupWidget/styles.module.scss
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     min-width: 200px;
+    box-shadow: 0px 6px 6px -1px #000000;
 
     .content {
         background: #1b1c1b;
