--- a/packages/lights/src/components/Room/styles.module.scss
+++ b/packages/lights/src/components/Room/styles.module.scss
@@ -33,14 +33,64 @@
     section {
         display: flex;
         flex-direction: column;
-        margin-bottom: 32px;
+        margin-bottom: 16px;
+        background-color: $colorBg2;
+        padding: 16px;
+        border-radius: 10px;
+        border: 1px solid #494a49;
+        box-shadow: 0px -3px 6px -1px #000000;
+        position: relative;
+
+        &.expanded {
+            padding-bottom: 18px;
+
+            .seeAll {
+                svg {
+                    bottom: -6px;
+                }
+            }
+
+            header {
+                margin-bottom: 8px;
+            }
+        }
 
         header {
             justify-content: flex-start;
             
             h3 {
-                margin-left: 16px;
+                margin-left: 24px;
                 font-size: 14px;
+            }
+
+            .dsc {
+                margin: 0 0 0 8px;
+                flex-basis: 30%;
+            }
+    
+            .expandButton {
+                margin-left: 16px;
+                cursor: pointer;
+            }
+    
+            .lightWrapper {
+                flex-basis: 80px;
+            }
+        
+            .hue {
+                flex-basis: 29%;
+                margin: 0 16px;
+        
+                label {
+                    display: block;
+                    margin: 6px 0;
+                    font-size: 14px;
+                    font-weight: 600;
+                }
+            }
+        
+            .slider {
+                flex-basis: 29%;
             }
         }
     }
@@ -48,9 +98,25 @@
 
 .light {
     margin-left: 19px;
+    border: 4px solid $colorBg;
     svg {
         margin-top: 4px;
-        fill: $colorBg2;
+        fill: $colorBg;
+        width: 2em;
+        height: 2em;
+    }
+}
+
+.seeAll {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    svg {
+        cursor: pointer;
+        position: absolute;
+        bottom: 2px;
         width: 2em;
         height: 2em;
     }
