--- a/packages/router/src/containers/App/styles.module.scss
+++ b/packages/router/src/containers/App/styles.module.scss
@@ -1,5 +1,16 @@
 :global {
+  #root {
+    height: 100%;
+  }
+
+  html {
+    height: 100%;
+    width: 100%;
+  }
+
   body {
+    height: 100%;
+    width: 100%;
     margin: 0;
     padding: 0;
     font-family: Roboto, sans-serif;
@@ -10,5 +21,14 @@
 
 .wrapper {
   background: #333333;
+  height: 100%;
   color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex-basis: 100%;
+  overflow-x: auto;
+  overflow-y: hide;
 }
