--- a/packages/lights/src/components/Content/styles.module.scss
+++ b/packages/lights/src/components/Content/styles.module.scss
@@ -1,8 +1,30 @@
 .wrapper {
-    display: flex;
-    width: 100%;
-    flex: 1;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  flex: 1;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+.left {
+  flex-basis: 60%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+  &::after {
+    content: "";
+    margin: 3% 2%;
+    width: 280px;
+  }
+}
+
+.right {
+  flex-basis: 40%;
+  display: flex;
+  flex-direction: column;
 }
