--- a/packages/lights/src/components/LightsGroupWidget/styles.module.scss
+++ b/packages/lights/src/components/LightsGroupWidget/styles.module.scss
@@ -2,6 +2,7 @@
 
 .wrapper {
     background: $colorBg2;
+    margin: 3% 2%;
     border-radius: 16px;
     text-align: center;
     display: flex;
@@ -12,7 +13,7 @@
     box-shadow: 0px 6px 6px -1px #000000;
 
     .content {
-        background: #1b1c1b;
+        background: $colorContent;
         padding: 40px;
         min-width: 200px;
     }
