feat: light level widget

--- a/packages/lights/src/components/Content/styles.module.scss
+++ b/packages/lights/src/components/Content/styles.module.scss
@@ -26,5 +26,7 @@
 .right {
   flex-basis: 40%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
