--- a/packages/lights/src/components/LightLevelWidget/styles.module.scss
+++ b/packages/lights/src/components/LightLevelWidget/styles.module.scss
@@ -2,9 +2,51 @@
 
 .wrapper {
   background: $colorContent;
-  padding: 40px;
-  min-width: 200px;
+  max-width: 270px;
+  max-height: 245px;
   margin: 5% 7% 2% 2%;
   border-radius: 5px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   box-shadow: 0px 6px 6px -1px #000000;
+
+  header {
+    padding: 16px;
+    position: relative;
+    background: $colorBg2;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
+    b {
+      position: absolute;
+      top: 16px;
+      right: 16px;
+
+      svg {
+        width: 1.5em;
+        height: 1.5em;
+      }
+    }
+
+    h3,
+    p {
+      margin: 0;
+      padding: 0;
+    }
+
+    h3 {
+      text-transform: uppercase;
+    }
+
+    p {
+      color: $colorActive;
+    }
+  }
+}
+
+.content {
+  padding: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
