--- a/packages/lights/src/components/LightsGroupWidget/styles.module.scss
+++ b/packages/lights/src/components/LightsGroupWidget/styles.module.scss
@@ -10,6 +10,7 @@
     justify-content: center;
     align-items: center;
     min-width: 200px;
+    max-height: 350px;
     box-shadow: 0px 6px 6px -1px #000000;
 
     .content {
